# laas-reflab

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  Makefile  Makefile.toml  README.md  cobbler.py  docker-compose.dev.yml  docker-compose.metrics.yml  docker-compose.override-dev.yml  docker-compose.prod.yml  docker-compose.yml  example.env  rust-toolchain.toml  sample_config.yaml  test_driver.py
crates/client/: Cargo.toml  README.md
crates/client/src/: configuration.rs  importing.rs  ipa.rs  lib.rs  mgmt_workflows.rs  notifications.rs  overrides.rs  queries.rs  remote.rs  switch_test.rs  test_utils.rs
crates/client/src/import_data/: dashboard_booking_export.py  trans.py  vlan_export.py
crates/common/: Cargo.toml  README.md
crates/common/src/: lib.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: lib.rs
crates/dal/: Cargo.toml  README.md
crates/dal/src/: lib.rs  sqlx_impl.rs  web.rs
crates/inventory-cli/: Cargo.toml  Dockerfile  readme.md
crates/inventory-cli/src/: error.rs  lib.rs  main.rs  modified.rs  prelude.rs  report.rs  utils.rs
crates/inventory-cli/src/command/: import.rs  mod.rs  validate.rs
crates/inventory-cli/src/fetch/: flavor.rs  host.rs  hostport.rs  mod.rs  switchport.rs
crates/inventory-cli/src/handlers/: mod.rs
crates/inventory-cli/src/handlers/flavor/: create.rs  delete.rs  fetch.rs  mod.rs  update.rs
crates/inventory-cli/src/handlers/host/: create.rs  delete.rs  fetch.rs  mod.rs  update.rs
crates/inventory-cli/src/handlers/hostport/: create.rs  delete.rs  fetch.rs  mod.rs  update.rs
crates/inventory-cli/src/handlers/image/: create.rs  delete.rs  fetch.rs  mod.rs  update.rs
crates/inventory-cli/src/handlers/lab/: create.rs  delete.rs  fetch.rs  mod.rs  update.rs
crates/inventory-cli/src/handlers/switch/: create.rs  delete.rs  fetch.rs  mod.rs  update.rs
crates/inventory-cli/src/handlers/switchport/: create.rs  delete.rs  fetch.rs  mod.rs  update.rs
crates/inventory-cli/src/report/: flavor.rs  host.rs  image.rs  interface.rs  kernel_arg.rs  lab.rs  mod.rs  order.rs  switch.rs  switchport.rs
crates/inventory-cli/src/schema/: flavor.rs  host.rs  image.rs  ipmi.rs  lab.rs  mod.rs  parse.rs
crates/liblaas/: Cargo.toml  README.md
crates/liblaas/src/: lib.rs
crates/liblaas/src/booking/: README.md  mod.rs
crates/liblaas/src/web/: api.rs  docs.rs  mod.rs
crates/models/: Cargo.toml
crates/models/.sqlx/: query-26021e6f1080f967964df5ab1ddf99c0ccc9a94909fa6f2dc17906a01bd3c65a.json  query-a8728017b848a043ace5632022eaba80a34b887f56dca97f0bfb697133d48391.json
crates/models/proptest-regressions/dashboard/: image.txt  instance.txt  template.txt
crates/models/src/: lib.rs  log.rs
crates/models/src/allocator/: allocation.rs  mod.rs  resource_handle.rs  types.rs  vpn_token.rs
crates/models/src/dashboard/: ci_file.rs  image.rs  instance.rs  mod.rs  network.rs  network_assignment_map.rs  provision_log_event.rs  template.rs
crates/models/src/inventory/: action.rs  mod.rs  vlan.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: email.rs  lib.rs
crates/tascii/: .gitignore  Cargo.toml  README.md
crates/tascii/src/: lib.rs  oneshot.rs  runtime.rs  scheduler.rs  task_runtime.rs  task_shim.rs  task_trait.rs  tests.rs  workflows.rs
crates/testing_utils/: Cargo.toml
crates/testing_utils/src/: lib.rs
crates/users/: Cargo.toml  README.md
crates/users/src/: ipa.rs  lib.rs
crates/workflows/: Cargo.toml
crates/workflows/src/: lib.rs  test_tascii.rs
crates/workflows/src/cleanup_booking/: clean_host.rs  mod.rs
crates/workflows/src/configure_networking/: mod.rs  task.rs  utils.rs
crates/workflows/src/deploy_booking/: cloud_init.rs  cobbler_set_config.rs  cobbler_start_provision.rs  debug_tasks.rs  grub.rs  manage_eve_nodes.rs  mod.rs  net_config.rs  notify.rs  reachable.rs  set_boot.rs  set_host_power_state.rs  sol.rs  ssh_server_up.rs  wait_host_os_reachable.rs
crates/workflows/src/entry/: mod.rs
crates/workflows/src/inspect_host/: mod.rs
crates/workflows/src/resource_management/: allocator.rs  cisco.rs  cobbler.rs  external_server.rs  ipmi_accounts.rs  mailbox.rs  mod.rs  network.rs  sonic.rs  vpn.rs
crates/workflows/src/users/: mod.rs
crates/workflows/src/utils/: mod.rs  net.rs  python.rs
src/: Cargo.toml  cobbler.py  main.rs
src/client/: Cargo.toml
src/client/src/: admin_utils.rs  importing.rs  ipa.rs  lib.rs  mgmt_workflows.rs  overrides.rs  prompts.rs  queries.rs  remote.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
src/config/: Cargo.toml
src/config/src/: lib.rs
src/dal/: Cargo.toml
src/dal/src/: lib.rs  web.rs
src/liblaas/: Cargo.toml
src/liblaas/src/: lib.rs
src/liblaas/src/booking/: mod.rs
src/liblaas/src/web/: api.rs  apispec.yaml  mod.rs
src/llid/: Cargo.toml
src/llid/src/: lib.rs
src/metrics/: Cargo.toml
src/metrics/src/: lib.rs  message.rs  metrics.rs
src/models/: Cargo.toml  README.md  trans.py
src/models/src/: allocation.rs  dashboard.rs  inventory.rs  lib.rs
src/notifications/: Cargo.toml  README.md
src/notifications/src/: email.rs  lib.rs
src/src/: main.rs
src/tascii/: Cargo.toml
src/tascii/src/: executors.rs  lib.rs  oneshot.rs  runtime.rs  scheduler.rs  task_runtime.rs  task_shim.rs  task_trait.rs  tests.rs  workflows.rs
src/tests/: Cargo.toml
src/users/: Cargo.toml
src/users/src/: ipa.rs  lib.rs
src/workflows/: Cargo.toml  README.md
src/workflows/src/: lib.rs  test_tascii.rs
src/workflows/src/cleanup_booking/: clean_host.rs  mod.rs
src/workflows/src/deploy_booking/: cobbler_set_config.rs  cobbler_start_provision.rs  deploy_host.rs  manage_eve_nodes.rs  mod.rs  net_config.rs  notify.rs  reachable.rs  set_boot.rs  set_host_power_state.rs  sol.rs  wait_host_os_reachable.rs
src/workflows/src/entry/: mod.rs
src/workflows/src/inspect_host/: mod.rs
src/workflows/src/resource_management/: allocator.rs  cisco.rs  cobbler.rs  ipmi_accounts.rs  mailbox.rs  mod.rs  network.rs  sonic.rs  vpn.rs
src/workflows/src/users/: mod.rs
src/workflows/src/utils/: cobbler.py  mod.rs  python.rs
(+201 files in other folders)
