[package]
name = "laas-reflab"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "laas-reflab"
path = "src/main.rs"

[profile.dev]
incremental = true

[dependencies]
tracing-subscriber = "0.3"
backtrace-on-stack-overflow = "*"
clap = "*"

common = { path = "crates/common" }
client = { path = "crates/client" }
config = { path = "crates/config" }
dal = { path = "crates/dal" }
liblaas = { path = "crates/liblaas" }
metrics = { path = "crates/metrics" }
models = { path = "crates/models" }
notifications = { path = "crates/notifications" }
tascii = { path = "crates/tascii" }
users = { path = "crates/users" }
workflows = { path = "crates/workflows" }

[workspace]
members = ["crates/*"]


[workspace.dependencies]
# async/multithreading
async-recursion = "1.0.4"
async-trait = "0.1.77"
futures = "0.3.28"
rayon = "1.5.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
parking_lot = { version = "0.12.1", features = ["send_guard"] }
crossbeam-channel = "0.5"

# web
aide = { version = "0.10.0", features = [
  "redoc",
  "axum",
  "axum-extra",
  "macros",
] }
axum = { version = "0.6.20", features = ["http2", "macros"] }
axum-extra = "0.5.0"
axum-jsonschema = { version = "0.5.0", features = ["aide"] }
axum-macros = "0.3.1"
hyper = { version = "0.14.31", features = ["full"] }
reqwest = { version = "0.11", features = [
  "json",
  "cookies",
  "default-tls",
  "multipart",
  "blocking",
] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors"] }

# database
tokio-postgres = { version = "0.7.8", features = [
  "with-chrono-0_4",
  "with-uuid-1",
  "with-eui48-1",
  "with-serde_json-1",
] }

# serialization
schemars = { version = "0.8.16" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
serde_with = { version = "*", features = ["json"] }
serde_yaml = { version = "0.9.19" }
serde-xml-rs = "0.6.0"
sqlx = { features = [
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
], version = "0.8.2" }


# errors/logging
anyhow = "1.0.68"
backtrace = "*"
thiserror = "1.0.32"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# types
base16ct = { version = "0.2", features = ["alloc"] }
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
dashmap = "5.4.0"
eui48 = { version = "1.1.0", features = ["serde", "serde_json"] }
uuid = { version = "*", features = [
  "v4",
  "fast-rng",
  "serde",
  "macro-diagnostics",
] }
macaddr = { version = "1.0", features = ["serde_std"] }
http-body = "*"

# misc utils
dotenv = "0.15.0"                                    # environment variables
derive_more = "0.99.11"                              # useful derive macros
enum_dispatch = "0.3.12"                             # enum dispatch
inquire = { version = "0.6.2", features = ['date'] } # TUI library
inventory = "0.3.15"                                 # type registration
itertools = "0.10.5"                                 # iterator utils
lazy_static = "1.4"                                  # lazy static initialization
lettre = "0.10.4"                                    # email client
maplit = "1.0.2"                                     # container literals
once_cell = "1.17"                                   # singletons
parse-size = "1.0.0"                                 # parse byte size to int
pyo3 = "0.18.1"                                      # python3 ffi
pbr = "1.1.1"                                        # progress bar
rand = "0.8.5"                                       # random number generation
regex = "1.5.4"                                      # regular expressions
remoc = { version = "*", features = ["rtc"] }        # remote object communication
sha2 = "0.10"                                        # sha algorithm
ssh2 = "0.9.4"
strum = "0.24.1"                                     # string/enum utils
strum_macros = "0.24.3"                              # useful macros for strings/enums
tar = "*"                                            # tarball utils
tera = "1.19.1"                                      # jinja like templating engine
ureq = { version = "2.6", features = ["json"] }      # HTTP client
url = "*"                                            # URL parsing
