[package]
name = "laas-reflab"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true
#incremental = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
backtrace-on-stack-overflow = "*"
clap = "*"

liblaas = { path = "liblaas" }
users = { path = "users" }
common = { path = "common" }
models = { path = "models" }
tascii = { path = "tascii" }
workflows = { path = "workflows" }
config = { path = "config" }
notifications = { path = "notifications" }
dal = { path = "dal" }
llid = { path = "llid" }
client = { path = "client" }

[workspace]
members = [
  "client",
  "liblaas",
  "llid",
  "users",
  "common",
  "models",
  "tascii",
  "workflows",
  "config",
  "notifications",
  "dal",
]
