[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true, features = ["derive"] }
remoc = { workspace = true, features = ['rtc'] }
uuid = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }

common = { path = "../common" }
config = { path = "../config" }
tascii = { path = "../tascii/" }
models = { path = "../models/" }
workflows = { path = "../workflows/" }
notifications = { path = "../notifications/" }
liblaas = { path = "../liblaas/" }
users = { path = "../users/" }
dal = { path = "../dal/" }
