[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
remoc = { workspace = true, features = ['rtc'] }
uuid = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
colored = { workspace = true }
base64 = { workspace = true }
ureq = { workspace = true }
thiserror = { workspace = true }

common = { path = "../common" }
config = { path = "../config" }
tascii = { path = "../tascii/" }
models = { path = "../models/" }
workflows = { path = "../workflows/" }
notifications = { path = "../notifications/" }
users = { path = "../users/" }
dal = { path = "../dal/" }
comfy-table = { workspace = true }