[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]

config = { path = "../config" }

anyhow = { workspace = true }
aide = { workspace = true, features = [
  "redoc",
  "axum",
  "axum-extra",
  "macros",
] }
axum = { workspace = true, features = ["http2", "macros"] }
axum-extra = { workspace = true }
axum-jsonschema = { workspace = true, features = ["aide"] }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
tokio = { workspace = true, features = ["full"] }
hyper = { workspace = true, features = ["full"] }
tower = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
dotenv = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = [
  "json",
  "cookies",
  "default-tls",
  "multipart",
  "blocking",
] }
http-body = { workspace = true }
crossbeam-channel = { workspace = true }
schemars = { workspace = true, features = ["uuid1"] }
async-recursion = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
inquire = { workspace = true, features = ['date'] }
rand = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
serde_with = { workspace = true, features = ["json"] }
parse-size = { workspace = true }
macaddr = { workspace = true, features = ["serde_std"] }
tracing = { workspace = true }
parking_lot = { workspace = true, features = ["send_guard"] }
once_cell = { workspace = true }
lazy_static = { workspace = true }
tokio-postgres = { workspace = true }
