[package]
name = "dal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
derive_more = { workspace = true }
uuid = { workspace = true }
backtrace = { workspace = true }
proptest = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio-native-tls",
  "postgres",
  "uuid",
  "chrono",
] }
common = { path = "../common" }
