[package]
name = "inventory_cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "inventory_cli"
path = "src/lib.rs"

[[bin]]
name = "inventory-cli"
path = "src/main.rs"


[dependencies]
mac_address = { workspace = true, features = ["serde"] }
tokio = { workspace = true }
models = { path = "../models" }
dal = { path = "../dal" }
sqlx = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
glob = { workspace = true }
uuid = { workspace = true }
eui48 = { workspace = true }
thiserror = { workspace = true }
colored = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tempdir = { workspace = true }
