[package]
name = "liblaas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-macros = { workspace = true }
aide = { workspace = true }
axum = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }


# local workspaces
common = { path = "../common/" }
tascii = { path = "../tascii/" }
metrics = { path = "../metrics/" }
dal = { path = "../dal" }
models = { path = "../models/" }
workflows = { path = "../workflows/" }
users = { path = "../users/" }
notifications = { path = "../notifications/" }
