[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
base16ct = { workspace = true }
eui48 = { workspace = true }
inventory = { workspace = true }
itertools = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

common = { path = "../common" }
dal = { path = "../dal" }
