[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
color-eyre = { workspace = true }
proptest = { workspace = true }
pretty_assertions = { workspace = true }

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
base16ct = { workspace = true }
eui48 = { workspace = true }
inventory = { workspace = true }
itertools = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
tokio-postgres = { workspace = true, features = [
  "with-chrono-0_4",
  "with-uuid-1",
  "with-eui48-1",
  "with-serde_json-1",
] }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }

common = { path = "../common" }
dal = { path = "../dal" }
testing_utils = { path = "../testing_utils" }
