[package]
name = "notifications"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tera = { workspace = true }

common = { path = "../common/" }
models = { path = "../models/" }
users = { path = "../users/" }
config = { path = "../config/" }
