[package]
name = "testing_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
once_cell = { workspace = true }
ctor = "0.4.2"
mac_address = { workspace = true }
color-eyre = { workspace = true }
proptest = { workspace = true }
chrono = { workspace = true }
eui48 = { workspace = true }
macaddr = { workspace = true }
serde_json = { workspace = true }

dal = { path = "../dal" }
