[package]
name = "testing_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
once_cell = { workspace = true }
ctor = "0.5.0"
mac_address = { workspace = true }
color-eyre = { workspace = true }
proptest = { workspace = true }
chrono = { workspace = true }
eui48 = { workspace = true }
macaddr = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }

dal = { path = "../dal" }
