[package]
name = "users"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["http2", "macros"] }
axum-macros = { workspace = true }
axum-extra = { workspace = true }
schemars = { workspace = true, features = ["uuid1"] }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["full"] }

common = { path = "../common" }
