[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
remoc = { workspace = true, features = ['rtc'] }
uuid = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

common = { path = "../common/" }
tascii = { path = "../tascii/" }
models = { path = "../models/" }
workflows = { path = "../workflows/" }
notifications = { path = "../notifications/" }
liblaas = { path = "../liblaas/" }
users = { path = "../users/" }
