[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"

aide = { version = "0.10.0", features = [
    "redoc",
    "axum",
    "axum-extra",
    "macros",
] }

axum = { version = "0.6.1", features = ["http2", "macros"] } # api
axum-extra = "0.5.0"
axum-jsonschema = { version = "0.5.0", features = ["aide"] }
axum-macros = "0.3.1"

chrono = {version = "0.4", features = ["serde", "clock"] }# time stuff used for booking dates

tokio = { version = "1", features = ["full"] } # async stuff

hyper = { version = "0.14.20", features = ["full"] } # axum dependency
tower = "0.4.13" # axum dependency
serde = "1.0.136" # serializing and deserializing
serde_json = "1.0.78" # serializing and deserializing
serde_yaml = { version = "0.9.19" }
rayon = "1.5.1" # multithreading
regex = "1.5.4" # regex support
dotenv = "0.15.0" # stuff for enviroment variables
strum = "0.24.1" # axum dependency
strum_macros = "0.24.3" # axum dependency
thiserror = "1.0.32" # error handling recommended by owen
reqwest = { version = "0.11", features = ["json", "cookies", "default-tls", "multipart", "blocking"]} # sending requests to openstack
http-body = "*"
crossbeam-channel = "0.5"
schemars = { version = "0.8.11", features = ["uuid1"] }
async-recursion = "1.0.4"
dashmap = "5.4.0"

futures = "0.3.28"

itertools = "0.10.5"

inquire = {version = "0.6.2", features = ['date'] }
pbr = "1.1.1"
rand = "0.8.5"
tower-http = { version = "0.3.5", features = ["cors"] }
serde_with = { version = "2.2.0", features = ["json"] }

parse-size = "1.0.0"

macaddr = { version = "1.0", features = ["serde_std"] }
tracing = "0.1"

parking_lot = { version = "0.12.1", features = ["send_guard"] }
once_cell = "1.17"
lazy_static = "1.4"

[dependencies.tokio-postgres]
version = "0.7.8"
features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4", "with-eui48-1"]

[dependencies.config]
path = "../config/"
