[package]
name = "dal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*" # serde_derive misbehaves when reexported
serde_with = "*"
derive_more = "0.99.17"
uuid = "1.3.3"
sha2 = "0.10"
base16ct = { version = "0.2", features = ["alloc"] }
inventory = "0.3.6"
backtrace = "*"

[dependencies.llid]
path = "../llid/"

[dependencies.common]
path = "../common/"
