[package]
name = "liblaas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-macros = { workspace = true }
axum-extra = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# local workspaces
common = { path = "../common/" }
tascii = { path = "../tascii/" }
models = { path = "../models/" }
workflows = { path = "../workflows/" }
llid = { path = "../llid/" }
users = { path = "../users/" }
notifications = { path = "../notifications/" }
