[package]
name = "llid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#chrono = {version = "0.4.19", features = ["serde"] }# time stuff used for booking dates
#dotenv = "0.15.0" # get environment vars
#strum = "0.24.1"
#strum_macros = "0.24.3"
#serde = "1.0.136" # serializing and deserializing
#serde_json = "1.0.78" # serializing and deserializing
#schemars = {version = "0.8.11", features = ["uuid1"] }
uuid = { version = "1.1.2", features = [
  "v4",
  "fast-rng",
  "serde",
  "macro-diagnostics",
] }
#axum = {version = "0.6.1", features = ["http2", "macros"] } # api
#axum-macros = "0.3.1"
#axum-extra = "0.4.2"
#axum-jsonschema = { version = "0.4.1", features = [ "aide", ] }
#aide = {version = "0.9.0", features = [ "redoc", "axum", "axum-extra", "macros", ] }
#hyper = { version = "0.14.20", features = ["full"] }
#http-body = "*"
#anyhow = "1.0.68"
#parse-size = "1.0.0"
#macaddr = { version = "1.0.1", features = ["serde_std"] }
#serde_with = "2.2.0"
