[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
enum_dispatch = "0.3.12"
serde = { workspace = true }
serde_json = { workspace = true }
telegraf = "0.6.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

config = { path = "../config" }

[dev-dependencies]
mockall = "0.12.1"
