[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_with = { workspace = true }
strum_macros = { workspace = true }
sha2 = { workspace = true }
base16ct = { workspace = true }
inventory = { workspace = true }
eui48 = { workspace = true }
lazy_static = { workspace = true }
tokio-postgres = { workspace = true }
uuid = { workspace = true }

common = { path = "../common" }
dal = { path = "../dal" }
