[package]
name = "notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*" # serde_derive misbehaves when reexported
serde_with = "*"
tera = "1.19.0"
lettre = "0.10.4"
once_cell = "1.18.0"


[dependencies.common]
path = "../common/"

[dependencies.models]
path = "../models/"

[dependencies.users]
path = "../users/"

[dependencies.config]
path = "../config/"
