[package]
name = "users"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_with = { workspace = true }

axum = { workspace = true, features = ["http2", "macros"] }
axum-macros = { workspace = true }
axum-extra = { workspace = true }
schemars = { workspace = true, features = ["uuid1"] }
tokio = { workspace = true, features = ["full"] }

common = { path = "../common" }
