[package]
name = "workflows"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { workspace = true, features = ["derive", "rc"] }
thiserror = { workspace = true }
serde_json = { workspace = true }
maplit = { workspace = true }
serde-xml-rs = { workspace = true }
base64 = { workspace = true }
ureq = { workspace = true }
pyo3 = { workspace = true }
inventory = { workspace = true }
url = { workspace = true }
ssh2 = { workspace = true }
schemars = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }

tascii = { path = "../tascii/" }
models = { path = "../models/" }
notifications = { path = "../notifications/" }
users = { path = "../users/" }
config = { path = "../config/" }
common = { path = "../common/" }
metrics = { path = "../metrics/" }
